--- a/draft.tex
+++ b/draft.tex
@@ -58,8 +58,9 @@
 %\newrelation{\pinc}{Q^\text{p}}%partial pref, complement (incomparable)
 
 \newcommand{\profile}{\bm{v}}%(complete) profile
-\newcommand{\pprofile}{\bm{p}}%partial profile
-\newcommand{\w}{\bm{w}}%partial weights
+\newcommand{\pprofile}{{\bm{p}}}%partial profile
+\newcommand{\w}{\bm{w}}
+\newcommand{\pw}{W}%our knowledge about the weights
 \newcommand{\C}{\mathcal{C}}%partial profile
 \newcommand{\powersetz}[1]{\mathscr{P}^*(#1)}
 
@@ -128,19 +129,19 @@ In Section \ref{sec:background} we provide the necessary background.
 We introduce the minimax criterion, that selects a winner that minimizes the worst possible regret, in Section \ref{sec:mmr}.
 In Section \ref{sec:elicit} we provide an interactive elicitation protocol based on minimal regret;  in Section \ref{sec:experiments} we present the empirical validation of our approach with simulations; and Section \ref{sec:conclusions} provides some final thoughts.
 
-\section{Social choice with partial information}\label{sec:background}
+\section{Social choice with partial information}
+\label{sec:background}
 We now introduce some basic concepts.
 We assume defined a set $A$ of $m$ alternatives (products, restaurants, movies, public projects, job candidates, etc.) and a set $\set{1, …, n}$ of agents (voters); each agent $j$ is associated to her “real” preference order $\pref_j$.
 The real preferences of the agents are elements of $\linors$, the linear orders (connected, transitive, asymmetric relations) over the alternatives.
-Following the social choice nomenclature, we call {\em profile} the association of a preference to each voter, denoted by $(\pref_1,\ldots,\pref_n)$, which we assume is fixed but unknown.
+Following the social choice nomenclature, we call {\em profile} the association of a preference to each voter, denoted by $(\pref_1,\ldots,\pref_n)$.
 The profile is equivalently represented by $\profile=(v_1,\ldots,v_n)$ where $v_j(i) \in \set{1, \ldots, m}$ denotes the rank (position) of alternative $i$ in the preference order $\pref_j$. 
-%With a little abuse of terminology, we will use the term profile to refer to either $\profile$ or to the preference relations, depending on the context.
 
 Let $V$ be the set of possible preference profiles (the $n$-fold cartesian product of the linear orders over the alternatives).
 A social choice function $f : V \rightarrow \powersetz{A}$ associates a profile with a set of winners, where $\powersetz{A}$ represents the set of subsets of $A$ except for the emptyset. (Sets are used for tied winners.)
 Among the many possible social choice functions, we consider {\em positional scoring rules}, which attach weights to positions according to  the vector $(w_1, \ldots, w_m)$ (also called the scoring vector).
 %A scoring rule associates each alternative to a score that is given by the sum of points obtained for each voter.
-An alternative obtains a score that depends on the rank obtained in each of the preference orders \commentOC{Consider removing $v$ and $w$}:
+An alternative obtains a score that depends on the rank obtained in each of the preference orders:
 \begin{align}
 \label{eq:srule}
 s(x; \profile, \w) = \sum_{j=1}^{n} w_{v_j(x)}
@@ -150,25 +151,25 @@ where $\alpha^{x}_r$ is the number of times that alternative $x$ was ranked in t
 The winners are the alternatives with highest scores.
 %We assume that the weights constitute a monotonic sequence: $w_{1} \geq w_{2} \geq \ldots \geq w_{m}$.
 
-In this work we want to reason about partial preference information.
+In this work we assume fixed, but unknown, a profile $\profile^*$ (and corresponding voters preferences $\pref_j^*$) and a weight vector $\w^*$, and we want to reason about partial preference information concerning those objects.
 Our knowledge at a given time of the preference of voter $j$ is encoded by a partial order over the alternatives, thus a transitive and asymmetric binary relation, denoted by $\ppref_j$. 
-In this work we assume that preference information is truthful, i.e. $a \ppref_j b ⇒ a \pref_j b$.
+In this work we assume that preference information is truthful, i.e. $a \ppref_j b ⇒ a \pref_j^* b$.
 We use $\pinc$ to denote incomparability, that is $a \pinc_{j} b$ iff $a \nppref_j b \wedge b \nppref_j a$.
 An incomplete profile $\pprofile = (\ppref_1, \ldots, \ppref_n)$ maps each voter to a partial preference.
 
 A completion of $\ppref_j$ is any linear order $\pref$ that extends $\ppref_j$.
-Let $C(\ppref_i) = \set{{\succ} \in \linors \suchthat {\ppref_j} \subseteq {\succ}}$ be the set of possible completions of $\ppref_i$.
-We let $C(\pprofile)=C(\ppref_1)\times \ldots \times C(\ppref_n)$ be the set of complete profiles extending $p$.
+Let $C(\ppref_j) = \set{{\succ} \in \linors \suchthat {\ppref_j} \subseteq {\succ}}$ be the set of possible completions of $\ppref_i$.
+We let $C(\pprofile)=C(\ppref_1)\times … \times C(\ppref_n)$ be the set of complete profiles extending $p$. Note that $\profile^* \in C(\pprofile)$.
 
 \medskip
 We also assume that the weights of the scoring rule are only partially specified.
 Therefore the vector $(w_1,\ldots,w_m)$  is not known but we are given a set of constraints restraining the possible values that weights can take.
-We consider a non-increasing sequence of weights:
+We consider a decreasing sequence of weights:
 \begin{align}
-1=w_{1} \geq w_{2} \geq \ldots \geq w_{m}=0. \label{eq:monotone}
+1=w_{1} > w_{2} > \ldots > w_{m}=0. \label{eq:monotone}
 \end{align}
 This is a natural assumption, as it is better to be ranked first than second, second than third, etc. 
-Without loss of generality, we consider that $w_1=1$ and $w_m=0$.
+Without loss of generality, we consider that $w_1=1$ and $w_m=0$. \commentOC{I suggest we say no more than this to justify this assumption. Otherwise, we might say something like the following. If the committee considers that, for example, “only the first ten positions matter” (so that $w_r = 0$ for $r > 10$), then we simply assume the committee is able to express this constraint at the start of the querying process, thus, that this information is known.}
 
 The weights of a scoring rule can model different preferences of the committee. 
 For instance, the weights can control the inclination to favor ``extreme'' alternatives (often at either the top or the bottom of the input rankings) at the expenses of ``moderate'' alternatives (that are more consistently in the middle part of the input rankings).
@@ -187,7 +188,7 @@ We use $\mathcal{W}$ to denote the set of convex weight vectors.
 In general it can be difficult to set the weights in an appropriate way.
 We assume that in addition of basic requirements (monotonicity and convexity), the chair (the person or the organization that is supervising the voting process) is able to specify additional preferences about how the social choice function should behave.
 In this work we assume that preferences of the chair are encoded with linear constraints about the vector $\w$, relating the value of the weights of different positions.
-We use $\C(\w^\text{p})$ to denote the set of weight vectors compatible with the preferences expressed by the chair about the scoring vector. \commentOC{Think about this.}
+We use $\pw \subseteq \mathcal{W}$ to denote the set of weight vectors compatible with the preferences expressed by the chair about the scoring vector.
 
 Of course it may be difficult for real decision makers to state preferences about the voting rule in such an abstract way.
 These additional preferences can be elicited by asking questions about concrete profiles, for instance, by showing a complete profile of a small synthetic election and asking who should be elected in this case, as shown in Section \ref{sec:elicit}.
@@ -211,19 +212,19 @@ In this work we consider the simultaneous presence of uncertainty in the agents'
 Using {\em maximum regret} to quantify the worst-case error, the alternative that minimize this error is selected as winner, providing us with a form of robust optimization.
 Intuitively, the quality of a proposed alternative $a$ is how far from optimal $a$  could be in the worst case, given the current knowledge about the voting rule and about the voters' preferences.
 
-The maximum regret is considered by assuming that an adversary both 1) can extend the partial profile $\pprofile$ into a complete profile, and 2) can instantiate the weights choosing among any weight vector in $C(\w^\text{p})$, where $\pprofile$ and $\w^\text{p}$ represent our knowledge so far.
+The maximum regret is considered by assuming that an adversary both 1) can extend the partial profile $\pprofile$ into a complete profile, and 2) can instantiate the weights choosing among any weight vector in $\pw$, where $\pprofile$ and $\pw$ represent our knowledge so far.
 
 We formalize the notion of minimax regret in multiple steps.
-First of all, $\Regret(x, \profile, \w)$ is the loss or ``actual'' regret  of selecting $x$ as a winner instead of choosing the optimal alternative under $\profile$ and $\w$:
-\[\Regret(x, \profile, \w) = \max_{y \in A} s(y; \profile,\w) - s(x; \profile, \w).\]
+First of all, denote by $s^*_{\profile, \w} = \max_{y \in A} s(y; \profile, \w)$ the score achieved by winning alternatives under $\profile$ and using weights $\w$. Now define $\Regret(x, \profile, \w)$ as the “regret” of selecting $x$ as a winner instead of choosing the optimal alternative under $\profile$ and $\w$:
+\[\Regret(x, \profile, \w) = s^*_{\profile, \w} - s(x; \profile, \w).\]
 
-The pairwise max regret of $x$ relative to $y$ given partial profile $\pprofile$ and the space of weights $W$
-$\PMR(x,y;\pprofile,W)$ is the worst-case loss under all possible realizations of the full profile {\em and} all possible instantiations of the weights:
-\begin{align}
-\PMR(x,y; \pprofile, W) & = \max_{\w \in W} \max_{\profile \in C(p)} s(y; \profile,\w) - s(x; \profile,\w).
-\end{align}
+%The pairwise max regret $\PMR(x,y;\pprofile,W)$ of $x$ relative to $y$ given partial profile $\pprofile$ and the set of weights $W$
+%is the worst-case loss under all possible realizations of the full profile {\em and} all possible instantiations of the weights:
+%\begin{align}
+%\PMR(x,y; \pprofile, W) & = \max_{\w \in W} \max_{\profile \in C(\pprofile)} s(y; \profile,\w) - s(x; \profile,\w).
+%\end{align}
 
-Max regret $\MR(x;\pprofile,W)$ is the worst-case loss of $x$. It is the loss occurred by an adversarial selection of a complete profile $\profile$ extending $\pprofile$ and a selection of $\w \in W$ to maximize the loss between $x$ and the true winner under $\profile$ and $w$.
+Max regret $\MR(x;\pprofile,W)$ is the worst-case loss of $x$. It is the loss occurred by an adversarial selection of a complete profile $\profile$ extending $\pprofile$ and a selection of $\w \in W$ to maximize the loss between $x$ and the true winner under $\profile$ and $\w$.
 \begin{align}
 \MR(x; \pprofile, W) & = \max_{y \in A} \PMR(x,y; \pprofile, W)\\
 & = \max_{\w \in W} \max_{\profile \in C(p)} \Regret(x, \profile, \w).
@@ -345,85 +346,8 @@ Then, what we have to to compute pairwise max regret $\PMR(x,y; \pprofile,W)$ is
 where $\C(w)$ are the linear constraints on $\w$ encoding the chair's preferences.
 The result of the optimization is the value of the pairwise max regret $\PMR$.
 
-\subsubsection{Minimax regret without the convex assumption}
-{\em (Still here? Or move it somewhere else?) }
-
-Without the convex assumption, we cannot use $\hat{v}$ for the agents in $U^{-}$, but only for agents in $U^{+}$ and $U^{?}$.
-%Let $\hat{v}_i$ be the linear order extending $\succ^{p}_i$ according to the above procedure.
-Then PMR can be written as follows:
-\begin{align*}
- &\PMR(x,y; \pprofile, W) =\\ 
- &\max_{\w \in W} \Big \{ \sum_{j \in U^-} [\max_{v_j \in C(\succ_j^p)} [w_{v_j(y)} \!-\! w_{v_j(x)}]] 
-  \!+\!	 \sum_{j \in A^+ \cup  U^?} [w_{\hat{v}_j(y)} \!-\! w_{\hat{v}_j(x)}] \Big \} 
- \end{align*}
-%Note that the second addendum inside the max do not depend on the choice of $\w$.
-Consider the two addenda inside the ``max''. 
-The first addendum is concerned with positioning of alternatives $x$ and $y$ for voters in $U^{-}$ for which we know that $x$ is preferred to $y$.
-The second addendum is concerned with voters in $U^{+}$ and $U^{?}$.
-We rewrite the second addendum as:
-\begin{align*}
-\sum_{j \in U^+ \cup  U^?} [w_{\hat{v}_j(y)} \!-\! w_{\hat{v}_j(x)}] 
-= \sum_{i = 1}^{m} (\hat{\alpha}_{i}^{y} - \hat{\alpha}_{i}^{x}) w_{i}
-\end{align*}
-where $\hat{\alpha}_{i}^{x}$ is the number of times that $x$ is ranked  in position $i$  considering the profile $\hat{v}$ of voters in $U^+ \cup  U^?$.
-%We compute pairwise maximum regret by considering binary variables $\{ B_{i} \}_{i=1,\ldots,m}$ to represent optimization choices related to where to position the alternatives.
-
-We now address the agents in $A^{-}$
-For a given $j$, let $\beta$ be the number of alternatives that are incomparable with $x$ and $y$:
-\[ \beta_{j} = \mid \{ c : c \pinc_{j} y \wedge c \pinc_{j} x \} \mid \]
-$x$ can be ranked between $t_{1}(j)=\mid \{ c \in A : c \ppref_{j} y \wedge x \nppref_{j} c \} \mid $ and position $t_{2}(j)=t_{1}(j)+\beta_{j}$.
-The completion for agent $j$ is such that the positions of $x$ and $y$ differ of exactly $\gamma_{j} =
-\mid \{ c \in A : x \ppref c \ppref y \} \mid$ positions.
-
-
-We now show how to optimize $\PMR$.
-In addition to variables $\{ w_{j} \}_{j=1,\ldots,m}$ (one for each position) we need to employ several additional decision variables.
-We introduce two sets of binary variables $B^{+}_{i,j}$ and $B^{-}_{i,j}$  for each position $i$ and for each voter $j$.
-Variable $B_{i,j}^{+}$ encodes the fact that the alternative $y$ is placed in position $i$ in the ranking of agent $j$; while  $B_{i,j}^{-}$ encodes the same thing for alternative $x$.
-%We also have numerical variables to represent the weights of the scoring rule.
-Since each alternative needs to be placed exactly in one place for each agent, we adopt the constraints
-$\sum_{i=t_{1}(j)}^{t_{2}(j)} B_{i,j}^{+} = 1$.
-Since we know that $x$ and $y$ are ranked $\gamma_{j}$ positions apart, we set the constraint:
-$B_{i+\gamma_{j},j}^{-} \geq B_{i,j}^{+}$,  for $i = \{ t_{1}(j), \ldots, t_{2}(j)\}$.
-
-% and $\sum_{i=1}^{m} B_{i,j}^{-} = 1$.
-%Since the objective is to maximize pairwise regret...
-
-The score of alternative $y$ can be written as $\sum_{i = 1}^{m} \hat{\alpha}_{i}^{y}  w_{i} + \sum_{i=1}^{n} \sum_{j=1}^{m} w_{j} B_{i,j}^{+}$.
-The objective function is now:
- \[ \max \sum_{i = 1}^{m} (\hat{\alpha}_{i}^{y} - \hat{\alpha}_{i}^{x}) w_{i} +  \sum_{i=1}^{n} \sum_{j=1}^{m} (B_{i,j}^{+} - B_{i,j}^{-})  w_i \]
-
-We use integer programming enconding tricks in order to linearize the problem.
-We introduce yet another set of variables  $V_{i,j}^{+} $  and $V_{i,j}^{-}$ % the multiplicative terms by new variables.
-and we enforce that $V_{i,j}^{+} = B^{+}_{i,j} w_i$ by setting constraints $V_{i,j}^{+} \leq B^{+}_{i,j}$ and $V_{i,j}^{+}  \leq w_i$.
-We have similar constraints for enforcing $V_{i,j}^{-} = B^{-}_{i,j} w_i$.
-
-We therefore obtain the following mixed integer linear program:
-\begin{align}
-\max & \sum_{i=1}^m  [(\hat{\alpha}_{i}^{y} - \hat{\alpha}_{i}^{x}) w_{i}] +
-  \sum_{j \in A^{-}} \sum_{i=t_{1}}^{t_{2}}  [V_{i,j}^{+} - V_{i,j}^{-}]
-\end{align}
-\begin{align}
-\text{ s.t. } &  \text{Equation } (\ref{eq:monotone}) & \\
-&  \C(\w) &  \\
-& \sum_{i=t_{1}}^{t_{2}} B_{i,j}^{+} = 1 & \forall j \in A^{-} \\
-& B_{i+\gamma_{j},j}^{-} \geq B_{i,j}^{+} & \forall i \in \{ t_{1}, \ldots t_{2}\}, \forall j \in A^{-} \\
-& V_{i,j}^{+} \leq B_{i,j}^{+}  & \forall i \in \{ t_{1}, \ldots t_{2}\}, j \in A^{-} \\
-& V_{i,j}^{+} \leq w_i & \forall i \in \{ t_{1}, \ldots t_{2}\}, j \in A^{-} \\
-& V_{i,j}^{-} \geq w_{i} + B_{i,j}^{-} - 1 & \forall i \in \{ t_{1}, \ldots t_{2}\}, j \in A^{-}\\
-& V_{i,j}^{-} \geq 0 & \forall i \in \{ t_{1}, \ldots t_{2}\}, j \in A^{-}
-\end{align} 
-%We write $w \in W$ as a shourtcut to represent the constraints that the weights are chosen to be in the feasible set.
-There are (at most) $nm$ binary variables and $m(n+1)$ numerical variables.
-The optimization program can be solved by any suitable MILP solver, although it is not suitable to large problem instances.
-
-% DONT KNOW IF WE HAVE TO FORMALIZE THIS AS A CLAIM
-%\begin{claim}
-%The $\PMR$ is computed using the above optimization problem.
-%\end{claim}
-
-\section{Interactive Elicitation} \label{sec:elicit}
-
+\section{Interactive Elicitation} 
+\label{sec:elicit}
 We propose an incremental elicitation method based on minimax regret.
 At each step, the system may either ask a question to one of the agents, or ask a question to the chair about the voting rule. 
 The goal is to acquire relevant information to reduce minimax regret as quick as possible.
@@ -724,6 +648,81 @@ It is easy to see that we check at most $|U|$ positions. In the worst case the s
 %%\section{Even more fun}
 %%We can consider different types of questions: asking to compare a pair of alternatives, asking about top-k alternatives.
 %
+
+\section{Minimax regret without the convex assumption}
+Without the convex assumption, we cannot use $\hat{v}$ for the agents in $U^{-}$, but only for agents in $U^{+}$ and $U^{?}$.
+%Let $\hat{v}_i$ be the linear order extending $\succ^{p}_i$ according to the above procedure.
+Then PMR can be written as follows:
+\begin{align*}
+ &\PMR(x,y; \pprofile, W) =\\ 
+ &\max_{\w \in W} \Big \{ \sum_{j \in U^-} [\max_{v_j \in C(\succ_j^p)} [w_{v_j(y)} \!-\! w_{v_j(x)}]] 
+  \!+\!	 \sum_{j \in A^+ \cup  U^?} [w_{\hat{v}_j(y)} \!-\! w_{\hat{v}_j(x)}] \Big \} 
+ \end{align*}
+%Note that the second addendum inside the max do not depend on the choice of $\w$.
+Consider the two addenda inside the ``max''. 
+The first addendum is concerned with positioning of alternatives $x$ and $y$ for voters in $U^{-}$ for which we know that $x$ is preferred to $y$.
+The second addendum is concerned with voters in $U^{+}$ and $U^{?}$.
+We rewrite the second addendum as:
+\begin{align*}
+\sum_{j \in U^+ \cup  U^?} [w_{\hat{v}_j(y)} \!-\! w_{\hat{v}_j(x)}] 
+= \sum_{i = 1}^{m} (\hat{\alpha}_{i}^{y} - \hat{\alpha}_{i}^{x}) w_{i}
+\end{align*}
+where $\hat{\alpha}_{i}^{x}$ is the number of times that $x$ is ranked  in position $i$  considering the profile $\hat{v}$ of voters in $U^+ \cup  U^?$.
+%We compute pairwise maximum regret by considering binary variables $\{ B_{i} \}_{i=1,\ldots,m}$ to represent optimization choices related to where to position the alternatives.
+
+We now address the agents in $A^{-}$
+For a given $j$, let $\beta$ be the number of alternatives that are incomparable with $x$ and $y$:
+\[ \beta_{j} = \mid \{ c : c \pinc_{j} y \wedge c \pinc_{j} x \} \mid \]
+$x$ can be ranked between $t_{1}(j)=\mid \{ c \in A : c \ppref_{j} y \wedge x \nppref_{j} c \} \mid $ and position $t_{2}(j)=t_{1}(j)+\beta_{j}$.
+The completion for agent $j$ is such that the positions of $x$ and $y$ differ of exactly $\gamma_{j} =
+\mid \{ c \in A : x \ppref c \ppref y \} \mid$ positions.
+
+
+We now show how to optimize $\PMR$.
+In addition to variables $\{ w_{j} \}_{j=1,\ldots,m}$ (one for each position) we need to employ several additional decision variables.
+We introduce two sets of binary variables $B^{+}_{i,j}$ and $B^{-}_{i,j}$  for each position $i$ and for each voter $j$.
+Variable $B_{i,j}^{+}$ encodes the fact that the alternative $y$ is placed in position $i$ in the ranking of agent $j$; while  $B_{i,j}^{-}$ encodes the same thing for alternative $x$.
+%We also have numerical variables to represent the weights of the scoring rule.
+Since each alternative needs to be placed exactly in one place for each agent, we adopt the constraints
+$\sum_{i=t_{1}(j)}^{t_{2}(j)} B_{i,j}^{+} = 1$.
+Since we know that $x$ and $y$ are ranked $\gamma_{j}$ positions apart, we set the constraint:
+$B_{i+\gamma_{j},j}^{-} \geq B_{i,j}^{+}$,  for $i = \{ t_{1}(j), \ldots, t_{2}(j)\}$.
+
+% and $\sum_{i=1}^{m} B_{i,j}^{-} = 1$.
+%Since the objective is to maximize pairwise regret...
+
+The score of alternative $y$ can be written as $\sum_{i = 1}^{m} \hat{\alpha}_{i}^{y}  w_{i} + \sum_{i=1}^{n} \sum_{j=1}^{m} w_{j} B_{i,j}^{+}$.
+The objective function is now:
+ \[ \max \sum_{i = 1}^{m} (\hat{\alpha}_{i}^{y} - \hat{\alpha}_{i}^{x}) w_{i} +  \sum_{i=1}^{n} \sum_{j=1}^{m} (B_{i,j}^{+} - B_{i,j}^{-})  w_i \]
+
+We use integer programming enconding tricks in order to linearize the problem.
+We introduce yet another set of variables  $V_{i,j}^{+} $  and $V_{i,j}^{-}$ % the multiplicative terms by new variables.
+and we enforce that $V_{i,j}^{+} = B^{+}_{i,j} w_i$ by setting constraints $V_{i,j}^{+} \leq B^{+}_{i,j}$ and $V_{i,j}^{+}  \leq w_i$.
+We have similar constraints for enforcing $V_{i,j}^{-} = B^{-}_{i,j} w_i$.
+
+We therefore obtain the following mixed integer linear program:
+\begin{align}
+\max & \sum_{i=1}^m  [(\hat{\alpha}_{i}^{y} - \hat{\alpha}_{i}^{x}) w_{i}] +
+  \sum_{j \in A^{-}} \sum_{i=t_{1}}^{t_{2}}  [V_{i,j}^{+} - V_{i,j}^{-}]
+\end{align}
+\begin{align}
+\text{ s.t. } &  \text{Equation } (\ref{eq:monotone}) & \\
+&  \C(\w) &  \\
+& \sum_{i=t_{1}}^{t_{2}} B_{i,j}^{+} = 1 & \forall j \in A^{-} \\
+& B_{i+\gamma_{j},j}^{-} \geq B_{i,j}^{+} & \forall i \in \{ t_{1}, \ldots t_{2}\}, \forall j \in A^{-} \\
+& V_{i,j}^{+} \leq B_{i,j}^{+}  & \forall i \in \{ t_{1}, \ldots t_{2}\}, j \in A^{-} \\
+& V_{i,j}^{+} \leq w_i & \forall i \in \{ t_{1}, \ldots t_{2}\}, j \in A^{-} \\
+& V_{i,j}^{-} \geq w_{i} + B_{i,j}^{-} - 1 & \forall i \in \{ t_{1}, \ldots t_{2}\}, j \in A^{-}\\
+& V_{i,j}^{-} \geq 0 & \forall i \in \{ t_{1}, \ldots t_{2}\}, j \in A^{-}
+\end{align} 
+%We write $w \in W$ as a shourtcut to represent the constraints that the weights are chosen to be in the feasible set.
+There are (at most) $nm$ binary variables and $m(n+1)$ numerical variables.
+The optimization program can be solved by any suitable MILP solver, although it is not suitable to large problem instances.
+
+% DONT KNOW IF WE HAVE TO FORMALIZE THIS AS A CLAIM
+%\begin{claim}
+%The $\PMR$ is computed using the above optimization problem.
+%\end{claim}
 
 \section{Proof of completion}
 \label{sec:prfCompl}
